--- a/sass/page/_template.scss
+++ b/sass/page/_template.scss
@@ -49,26 +49,30 @@ body {
     }
     .center_block {
         flex: auto;
+        flex-basis: 100%;
         max-width: 100%;
-        // overflow: hidden;
     }
     .left_block {
         flex: 0 0 260px;
         max-width: 260px;
-        // float: left;
-        // width: 260px;
         margin-right: 40px;
         &.hidden {
             +.center_block {
+                flex: none;
+                flex-basis: 100%;
                 max-width: 100%;
             }
         }
         +.center_block {
+            flex: auto;
+            flex-basis: calc(100% - 300px);
             max-width: calc(100% - 300px);
         }
         @include screen('tablet') {
             display: none;
             +.center_block {
+                flex: none;
+                flex-basis: 100%;
                 max-width: 100%;
             }
         }
