--- a/sass/page/_template.scss
+++ b/sass/page/_template.scss
@@ -48,7 +48,7 @@ body {
         display: flex;
     }
     .center_block {
-        flex: auto;
+        flex: none;
         flex-basis: 100%;
         max-width: 100%;
     }
