--- a/sass/sass/modual/_form.scss
+++ b/sass/sass/modual/_form.scss
@@ -1326,7 +1326,7 @@ select:focus {
 //---------------------------------------------下拉選單--------//
 select {
     line-height: 1.35em;
-    padding: 0.5em;
+    padding: .5em 24px .5em .5em;
     border: 1px solid $color-gray;
     background: #fff url(../images/icon/icon_select_arrow.png) no-repeat right center;
     background-size: 16px;
