--- a/sass/sass/modual/_form.scss
+++ b/sass/sass/modual/_form.scss
@@ -389,17 +389,21 @@ select::-ms-expand {
         flex-basis: 100%;
         max-width: 100%;
         align-items: center;
+        justify-content: space-between;
         @include gutter(0);
 
         >.form_grp {
             border-bottom: 0;
             padding-top: 0;
+            margin: 0;
         }
 
         label {
             @include gutter(.6em);
             padding-top: 5px;
         }
+
+
 
         @include screen('mobile') {
             @include gutter();
@@ -442,6 +446,7 @@ select::-ms-expand {
             width: calc(100% / 3);
             flex-basis: calc(100% / 3);
             max-width: calc(100% / 3);
+            margin: .3em 0;
 
             @include screen('xs_mobile') {
                 width: 100%;
@@ -455,6 +460,7 @@ select::-ms-expand {
             width: calc(100% / 3 - .6em);
             flex-basis: calc(100% / 3 - .6em);
             max-width: calc(100% / 3 - .6em);
+            margin: .3em 0;
 
             @include screen('xs_mobile') {
                 width: calc(100% - .6em);
