--- a/sass/sass/modual/_form.scss
+++ b/sass/sass/modual/_form.scss
@@ -389,18 +389,28 @@ select::-ms-expand {
         flex-basis: 100%;
         max-width: 100%;
         align-items: center;
-        justify-content: space-between;
+        //justify-content: space-around;
         @include gutter(0);
 
         >.form_grp {
             border-bottom: 0;
             padding-top: 0;
-            margin: 0;
+            //margin: 0;
         }
+
+        // >input,
+        // >select,
+        // >label{
+        //     margin: .3em 0;
+        // }
 
         label {
             @include gutter(.6em);
             padding-top: 5px;
+            // &.label_hidden{
+            //     width: 0;
+            //     flex-basis: 0;
+            // }
         }
 
 
@@ -446,7 +456,6 @@ select::-ms-expand {
             width: calc(100% / 3);
             flex-basis: calc(100% / 3);
             max-width: calc(100% / 3);
-            margin: .3em 0;
 
             @include screen('xs_mobile') {
                 width: 100%;
@@ -460,7 +469,6 @@ select::-ms-expand {
             width: calc(100% / 3 - .6em);
             flex-basis: calc(100% / 3 - .6em);
             max-width: calc(100% / 3 - .6em);
-            margin: .3em 0;
 
             @include screen('xs_mobile') {
                 width: calc(100% - .6em);
