--- a/sass/sass/common/_mixin.scss
+++ b/sass/sass/common/_mixin.scss
@@ -1,14 +1,12 @@
 //  MIXIN
-@import "mixins/_extend"; 				//繼承
-@import "mixins/_mediaquery"; 			//mediaquery
-@import "mixins/_gradient"; 			//漸層
-@import "mixins/_text-overflow"; 		//ellipsis 文字刪節號
-@import "mixins/_li-reset"; 			//清除li格式
-@import "mixins/_bootstrap-grid"; 		//格線系統
-// @import "mixins/_flex-set_for2"; 		//flex格線系統 for迴圈
-@import "mixins/_flex-set_for2-test"; 		//flex格線系統 for迴圈
-// @import "mixins/_flex-set_origi2"; 		//flex格線系統 
-// @import "mixins/_make-column"; 		//原生bs格線系統(沒有必要用不用匯入)
+@import "mixins/_extend"; 				// 繼承
+@import "mixins/_mediaquery"; 			// mediaquery
+@import "mixins/_gradient"; 			// 漸層
+@import "mixins/_text-overflow"; 		// ellipsis 文字刪節號
+@import "mixins/_li-reset"; 			// 清除li格式
+@import "mixins/_bootstrap-grid"; 		// 格線系統
+@import "mixins/_flex-grid"; 		    // flex 格線系統（for迴圈、mixin化）
+// @import "mixins/_make-column"; 		// 原生bs格線系統(沒有必要用不用匯入)
 
 // 客製化
 @import "mixins/_image"; 				//img設定
