--- a/sass/sass/element/_btn.scss
+++ b/sass/sass/element/_btn.scss
@@ -168,7 +168,7 @@ $btn-radius:.2em;
     text-shadow:none;
 }
 .readonly, [readonly] {
-    opacity: .5;
+    // opacity: .5;
     cursor: not-allowed!important;
     text-shadow:none;
 }
