--- a/sass/sass/modual/_notice.scss
+++ b/sass/sass/modual/_notice.scss
@@ -1,21 +1,21 @@
 //https://isabelcastillo.com/error-info-messages-css
 *[class^="notice"] {
-    padding: .4em 2.5em;
+    padding: .25em 1.5em;
+    margin: 0 .3em;
     display: block;
     width: 100%;
     font-size: .938em;
-    margin: .2em 0;
-    position: relative;
     color: #666;
-    background-color: #f2f2f2;
+    // background-color: #f2f2f2;
     position: relative;
     box-sizing: border-box;
     border-radius: 4px;
     border: none;
+    text-align: left;
     &:before {
         position: absolute;
-        top: .7em;
-        left: .8em;
+        top: 7px;
+        left: .25em;
         display: block;
         vertical-align: middle;
         width: 15px;
@@ -46,7 +46,7 @@
 }
 *[class*="notice_info"] {
     color: #00529B;
-    background-color: #ceecfa;
+    // background-color: #ceecfa;
     &:before {
         background: url(../images/basic/icon_info.svg) no-repeat center center;
         background-size: 15px;
@@ -54,7 +54,7 @@
 }
 *[class*="notice_success"] {
     color: #3B7600;
-    background-color: #DFF2BF;
+    // background-color: #DFF2BF;
     &:before {
         background: url(../images/basic/icon_success.svg) no-repeat center center;
         background-size: 15px;
@@ -62,7 +62,7 @@
 }
 *[class*="notice_warning"] {
     color: #C23E00;
-    background-color: #FEEFB3;
+    // background-color: #FEEFB3;
     &:before {
         background: url(../images/basic/icon_warning.svg) no-repeat center center;
         background-size: 15px;
@@ -70,7 +70,7 @@
 }
 *[class*="notice_error"] {
     color: #C40000;
-    background-color: #FFD2D2;
+    // background-color: #FFD2D2;
     &:before {
         background: url(../images/basic/icon_error.svg) no-repeat center center;
         background-size: 15px;
