2021-0922 flex_template 減肥

--- a/sass/sass/common/_grid-flex.scss
+++ b/sass/sass/common/_grid-flex.scss
@@ -28,144 +28,55 @@ $m-gutter: 4px;
 }
 
 /////////////////////// step 2、子層設定欄寬
-.flex-equal-3, .flex-equal-5, .flex-equal-7,
-.flex-equal-9, .flex-equal-11{
-    .Flex-set{
-        .col{ background: #00b0c6; }
-    }
-}
+// .flex-equal-2, .flex-equal-3, .flex-equal-4, .flex-equal-5{
+//     .Flex-set{
+//         .col{ background: #00b0c6; }
+//     }
+// }
 
-.flex-equal-2{
-    .Flex-set{
-        .col{
-            @include flex-xs-equal(1, 0px);
-            @include flex-sm-equal(2, $m-gutter);
-            @include flex-md-equal(2, $m-gutter);
-            @include flex-lg-equal(2, $m-gutter);
-            @include gutter();
-        }
-    }
-}
-.flex-equal-3{
-    .Flex-set{
-        .col{
-            @include flex-xs-equal(1, 0px);
-            @include flex-sm-equal(2, $m-gutter);
-            @include flex-md-equal(3, $m-gutter);
-            @include flex-lg-equal(3, $m-gutter);
-            @include gutter();
-        }
-        .thumbnail{
-            margin-bottom: 30px;
-            @include flex-xs-equal(1, 0px);
-            @include flex-sm-equal(2, $m-gutter);
-            @include flex-md-equal(3, $m-gutter);
-            @include flex-lg-equal(3, $m-gutter);
-            @include screen('mobile') {
-                justify-content: center;
-            }
-        }
-    }
-}
-.flex-equal-4{
-    .Flex-set{
-        .col{
-            @include flex-xs-equal(1, 0px);
-            @include flex-sm-equal(2, $m-gutter);
-            @include flex-md-equal(4, $m-gutter);
-            @include flex-lg-equal(4, $m-gutter);
-            @include gutter();
-        }
-    }
-}
-.flex-equal-5{
-    .Flex-set{
-        .col{
-            @include flex-xs-equal(1, 0px);
-            @include flex-sm-equal(2, $m-gutter);
-            @include flex-md-equal(5, $m-gutter);
-            @include flex-lg-equal(5, $m-gutter);
-            @include gutter();
-        }
-    }
-}
-.flex-equal-6{
-    .Flex-set{
-        .col{
-            @include flex-xs-equal(1, 0px);
-            @include flex-sm-equal(2, $m-gutter);
-            @include flex-md-equal(6, $m-gutter);
-            @include flex-lg-equal(6, $m-gutter);
-            @include gutter();
-        }
-    }
-}
-.flex-equal-7{
-    .Flex-set{
-        .col{
-            @include flex-xs-equal(1, 0px);
-            @include flex-sm-equal(3, $m-gutter);
-            @include flex-md-equal(4, $m-gutter);
-            @include flex-lg-equal(7, $m-gutter);
-            @include gutter();
-        }
-    }
-}
-.flex-equal-8{
-    .Flex-set{
-        .col{
-            @include flex-xs-equal(2, 2px);
-            @include flex-sm-equal(4, $m-gutter);
-            @include flex-md-equal(6, $m-gutter);
-            @include flex-lg-equal(8, $m-gutter);
-            @include gutter();
-        }
-    }
-}
-.flex-equal-9{
-    .Flex-set{
-        .col{
-            @include flex-xs-equal(2, 2px);
-            @include flex-sm-equal(3, $m-gutter);
-            @include flex-md-equal(6, $m-gutter);
-            @include flex-lg-equal(9, $m-gutter);
-            @include gutter();
-        }
-    }
-}
-.flex-equal-10{
-    .Flex-set{
-        .col{
-            @include flex-xs-equal(4, 2px);
-            @include flex-sm-equal(6, $m-gutter);
-            @include flex-md-equal(8, $m-gutter);
-            @include flex-lg-equal(10, $m-gutter);
-            @include gutter();
-        }
-    }
-}
-.flex-equal-11{
-    .Flex-set{
-        .col{
-            @include flex-xs-equal(3, 2px);
-            @include flex-sm-equal(5, $m-gutter);
-            @include flex-md-equal(7, $m-gutter);
-            @include flex-lg-equal(11, $m-gutter);
-            @include gutter();
-        }
-    }
-}
-.flex-equal-12{
-    .Flex-set{
-        .col{
-            @include flex-xs-equal(3, 2px);
-            @include flex-sm-equal(6, $m-gutter);
-            @include flex-md-equal(9, $m-gutter);
-            @include flex-lg-equal(12, $m-gutter);
-            @include gutter();
-        }
-    }
-}
+// .flex-equal-2{
+//     .Flex-set{
+//         .col{
+//             @include flex-xs-equal(1, 0px);
+//             @include flex-sm-equal(2, $m-gutter);
+//             @include flex-md-equal(2, $m-gutter);
+//             @include flex-lg-equal(2, $m-gutter);
+//             @include gutter();
+//         }
+//     }
+// }
+// .flex-equal-3{
+//     .Flex-set{
+//         .col{
+//             @include flex-xs-equal(1, 0px);
+//             @include flex-sm-equal(2, $m-gutter);
+//             @include flex-md-equal(3, $m-gutter);
+//             @include flex-lg-equal(3, $m-gutter);
+//             @include gutter();
+//         }
+//         .thumbnail{
+//             margin-bottom: 30px;
+//             @include flex-xs-equal(1, 0px);
+//             @include flex-sm-equal(2, $m-gutter);
+//             @include flex-md-equal(3, $m-gutter);
+//             @include flex-lg-equal(3, $m-gutter);
+//             @include screen('mobile') {
+//                 justify-content: center;
+//             }
+//         }
+//     }
+// }
+// .flex-equal-4{
+//     .Flex-set{
+//         .col{
+//             @include flex-xs-equal(1, 0px);
+//             @include flex-sm-equal(2, $m-gutter);
+//             @include flex-md-equal(4, $m-gutter);
+//             @include flex-lg-equal(4, $m-gutter);
+//             @include gutter();
+//         }
+//     }
+// }
 
 
 //////////////////////////////////////////////////
@@ -175,6 +86,47 @@ $m-gutter: 4px;
 
 
 // 多欄 = 12
+.flex-6-6{
+    .col{
+        @include flex-xs(12, 0px);
+        @include flex-sm(12, $m-gutter);
+        @include flex-md(6, $m-gutter);
+        @include flex-lg(6, $m-gutter);
+        @include gutter();
+    }
+}
+
+.flex-4-4-4{
+    .col{
+        @include flex-xs(12, 0px);
+        @include flex-sm(12, $m-gutter);
+        @include flex-md(4, $m-gutter);
+        @include flex-lg(4, $m-gutter);
+        @include gutter();
+    }
+    .thumbnail{
+        margin-bottom: 30px;
+        @include flex-xs(12, 0px);
+        @include flex-sm(12, 10px);
+        @include flex-md(4, 10px);
+        @include flex-lg(4, 10px);
+
+        @include screen('mobile') {
+            justify-content: center;
+        }
+    }
+}
+
+.flex-3-3-3-3{
+    .col{
+        @include flex-xs(12, 0px);
+        @include flex-sm(6, $m-gutter);
+        @include flex-md(3, $m-gutter);
+        @include flex-lg(3, $m-gutter);
+        @include gutter();
+    }
+}
+
 .flex-3-6-3{
     .col{
         @include flex-xs(12, 0px);
@@ -231,10 +183,15 @@ $m-gutter: 4px;
     .Flex-set{
         @extend %flex_set;
         .col{
-            @include flex-xs-equal(1, 0px);
-            @include flex-sm-equal(2, $m-gutter);
-            @include flex-md-equal(2, $m-gutter);
-            @include flex-lg-equal(2, $m-gutter);
+            // @include flex-xs-equal(1, 0px);
+            // @include flex-sm-equal(2, $m-gutter);
+            // @include flex-md-equal(2, $m-gutter);
+            // @include flex-lg-equal(2, $m-gutter);
+
+            @include flex-xs(12, 0px);
+            @include flex-sm(12, $m-gutter);
+            @include flex-md(6, $m-gutter);
+            @include flex-lg(6, $m-gutter);
             // @include gutter();
             padding: 1em;
 
